Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-46684

File parameters "Date modified","Size" not updated when using QFileSystemModel

XMLWordPrintable

    • 9e1b6b6e53d01bed76dc624e4b6c0d5f7748bf85 (qtbase/5.9, 15.12.2017, 5.9.4)

      1. Create QTreeView and set QFileSystemModel as model. QFileSystemModel uses QFileSystemWatcher to update the model, which works except "Date modified" field is not updated.

        1. QTBUG-46684.zip
          0.9 kB
        2. qtbug46684.zip
          2 kB
        3. qtbug46684_watcher.zip
          2 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            qtcomsupport Qt Support
            Votes:
            7 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:

                There are no open Gerrit changes